--- a/.github/workflows/Q7.yml
+++ b/.github/workflows/Q7.yml
@@ -1,5 +1,11 @@
+name: Greetings
+
+on: push
+
 jobs:
   test:
+    runs-on: ubuntu-latest
+
     steps:
-      - name: 22f3002277@ds.study.iitm.ac.in
-        run: echo "Hello, world!"
+    - name: 22f3002277@ds.study.iitm.ac.in
+      run: echo "Hello, world!"
